intro, wendy edits, cell decon ref

--- a/References/references.bib
+++ b/References/references.bib
@@ -2470,3 +2470,20 @@ PMCID: PMC5097126}
 Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {en}
 }
+
+@article{houseman2016,
+	title = {Reference-free deconvolution of DNA methylation data and mediation by cell composition effects},
+	author = {{Houseman}, {E. Andres} and {Kile}, {Molly L.} and {Christiani}, {David C.} and {Ince}, {Tan A.} and {Kelsey}, {Karl T.} and {Marsit}, {Carmen J.}},
+	year = {2016},
+	month = {12},
+	date = {2016-12},
+	journal = {BMC Bioinformatics},
+	pages = {259--259},
+	volume = {17},
+	number = {1},
+	doi = {10.1186/s12859-016-1140-4},
+	url = {http://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1140-4},
+	note = {tex.ids= housemanReferencefreeDeconvolutionDNA2016a
+PMCID: PMC4928286
+PMID: 27358049}
+}
