wendy edits chapter 2

--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -13,10 +13,10 @@ Population stratification or confounding effects from variation in genetic ances
 However, methods to estimate population effects either by inferring genetic ancestry [@barfield2014; @rahmani2017] from highly genotype-associated CpG methylation [@rahmani2017] or by predicting ethnicity, may have population- and tissue- specific effectiveness.
 
 In this study, we developed a placenta-specific approach to predicting ethnicity, which we refer to as planet (Placental DNAm Elastic Net Ethnicity Tool).
-planet uses DNAm and genotyping data measured on the 450k array and was developed using multiple cohorts of placentas from North America.
+Planet uses DNAm and genotyping data measured on the 450k array and was developed using multiple cohorts of placentas from North America.
 To ensure compatibility with future studies, planet was developed on overlapping sites from 450k and the newer 850k/EPIC array.
 We show that planet out-performs existing methods in predicting ethnicity in placental DNAm data and can produce accurate measures of genetic ancestry.
-Our method can be used to classify individuals into discrete ancestral populations based on self-reported ethnicity (i.e., African, Asian, and Caucasian) or to describe individuals on an ancestral continuum that may more accurately reflect the nature of modern human populations.
+Our method can be used to classify individuals into discrete groups based on self-reported race/ethnicity (i.e., Black/African, Asian, and White/Caucasian) or to describe individuals on an ancestral continuum that more accurately reflect the nature of human populations.
 In studies where ethnicity information is unavailable, planet can be applied to predict ethnicity after obtaining DNAm data, and used to investigate population-specific differences or to minimize confounding by population stratification in downstream DNA methylation statistical analyses.
 
 ## Results
@@ -68,7 +68,7 @@ For each sample, planet returns a probability that the sample is African, Asian 
 We reason that these probabilities have the potential to identify samples with mixed ancestry or ethnicity.
 Therefore, we implemented a threshold function on planet's probability outputs that classifies samples as 'Ambiguous' if the highest of the three class-specific probabilities is below 0.75 (Material and Methods, Figure \@ref(fig:figa3)).
 This resulted in 7 self-reported African, 12 Asian, and 13 Caucasian samples as being classified as ambiguous, which led to a slight decrease in performance (Figure \@ref(fig:ch2fig1)a).
-However, we note that because genetic ancestry is on a continuum and due to the limitations of self-reported ethnicity, there are likely to be individuals of mixed ancestry/ethnicity in our sample set, and therefore hypothesize that a model that includes an ambiguous class is more realistic and accurate than one without.
+However, we note that because genetic ancestry exists on a continuum and due to the limitations of self-reported ethnicity, there are likely to be individuals of mixed ancestry/ethnicity in our sample set, and therefore hypothesize that a model that includes an ambiguous class is more realistic and accurate than one without.
 Cross validation, where training/validation subsets were created based on cohort-identity, yielded an overall accuracy of 0.900, a Kappa of 0.738, and a positive predictive value of 0.944 (Figure \@ref(fig:ch2fig1)a), which was consistent when examining performance by dataset (Figure \@ref(fig:figa4)).
 
 (ref:ch2fig1cap) Evaluating planet's performance and characterizing ethnicity-predictive 450k sites. We developed planet (Placental elastic net ethnicity classifier), using placental 450k data and evaluated its classification performance using leave-one-dataset-out cross validation. **a** Each sample's ethnicity classification is shown with respect to their self-reported ethnicity. Samples were called 'ambiguous' if their predicted probability fell below a 'confidence' threshold of 75%. **b** planet utilizes a subset of ethnicity-predictive sites from the 450k. To investigate whether genetic signal is present in the measurement for these sites, we cross-referenced ethnicity-predictive sites to an existing placental mQTL database [@delahaye2018] and determined whether any sites had SNPs present in either the probe body, CpG site of interrogation, or single base extension sites, based on dbSNP137
@@ -138,10 +138,10 @@ One study used two distinct cohorts from Vancouver, Canada (GSE100197, = 102) an
 Next, because adjustment for population stratification can not only be done via correction in linear modelling, but can also be done by stratifying an analysis by population identity, we performed a secondary EWAS confined to samples predicted as Caucasians (n = 71/102 for discovery, n = 28/48 for validation).
 This resulted in a decrease in overlap in preeclampsia-associated sites between cohorts: 359/1488 (17%) [Table \@ref(tab:taba7)], although the correlation between delta betas remained high (r = 0.67), indicating the observed decrease in overlap between significantly differentially methylated sites was likely due to a decrease in power from smaller sample size (particularly in the validation group) rather than a decrease in concordance between cohorts.
 
-planet can be useful for checking for discrepancies in self-reported ethnicity information.
+The application of planet can be useful for checking for discrepancies in self-reported ethnicity information.
 We tested whether planet could identify the ethnicity of samples from an all-Caucasian population.
 GSE71678 (n = 343), a cohort not used in the development of planet, consisted of DNAm data from placental samples collected from a New Hampshire, USA birth cohort that investigated the effects of arsenic exposure on placental DNAm [@green2016].
-planet determined 342 samples were classified as Caucasian, and 1 sample had a high probability of belonging to the Caucasian group (Probability = 0.73) but was below our confidence threshold and was therefore classified as 'ambiguous', confirming ethnic homogeneity was high in this cohort and adjustment for population stratification was not needed in this study.
+342 samples were classified as Caucasian by planet, and 1 sample had a high probability of belonging to the Caucasian group (Probability = 0.73) but was below our confidence threshold and was therefore classified as 'ambiguous', confirming ethnic homogeneity was high in this cohort and adjustment for population stratification was not needed in this study.
 
 \captionsetup{width=6.5in}
 
@@ -173,9 +173,11 @@ Ethnicity and genetic ancestry -associated PCs were confined to the third to six
 Future improvements to these types of methods can aim at improving the amount of ethnicity and genetic ancestry -associated signal in the sites used to ensure the top two-three PCs are always associated with ethnicity and ancestry.
 This aim could also be supported in identifying ethnicity and ancestry -associated sites that are also robust to changes in non-genetic drivers of DNAm such as cell type, gestational age, and severe pathology.
 
-Supervised population inference approaches such as ethnicity classifiers can return an explicit assignment of samples into distinct ancestral groups.
+Supervised population inference approaches such as ethnicity classifiers can return an explicit assignment of samples into distinct groups.
 In comparison to self-reported ethnicity, an assessment based on DNAm/genetic data is more objectively defined, which allows for more robust investigation of ethnicity-specific effects.
-An important goal of any population structure inference method would be to identify samples of mixed ancestry, a capability not well supported by Zhou's ethnicity classifier [@zhou2017]. In contrast, planet produced membership probabilities corresponding to each ethnicity group that were highly correlated with genetic ancestry estimated from genotyping data. This was consistent whether we used principal components analysis on AIMs data, or model-based estimation of ancestry on high density genotyping array data [@frichot2015; @price2006; @pritchard2000; @alexander2009].
+An important goal of any population structure inference method would be to account for samples of mixed ancestry, a capability not well supported by Zhou's ethnicity classifier [@zhou2017]. 
+In contrast, planet produced membership probabilities corresponding to each ethnicity group that were highly correlated with genetic ancestry estimated from genotyping data. 
+This was consistent whether we used principal components analysis on AIMs data, or model-based estimation of ancestry on high density genotyping array data [@frichot2015; @price2006; @pritchard2000; @alexander2009].
 In this study, we defined samples of potential mixed ancestry as those with a maximum membership probability of less than 0.75, but we note that this threshold can be manually adjusted by the user, and that the probabilities themselves can be used to adjust for population structure in study populations including significant numbers of samples with mixed ancestry.
 
 Results of DNAm studies on genetic ancestry and ethnicity, such as this one, depend on the number and proportion of different populations sampled from, as well as the tissue studied.
@@ -187,7 +189,11 @@ It is possible that application of these approaches to other tissues that are mo
 However, any DNAm-based test needs to be validated before application to new tissues, which has not yet been done for these methods.
 
 A major goal of EWAS is to uncover signal truly associated with the phenotype/environment of interest that might generalize to other relevant populations.
-This is challenging given the wide host of technical variables that can affect DNAm measurements and the common finding that many phenotypes are associated with relatively small effect sizes [@price2018; @breton2017]. To this end, adjustment for major confounders such as genetic ancestry or ethnicity can significantly improve EWAS. We demonstrated, in a reanalysis of our previously published PE placentas, that adjustment for ethnicity, determined by planet, improved the replicability of significant associations between independent cohorts. Conversely, overadjustment can occur when populations are relatively homogeneous, resulting in bias and/or loss of precision. We showed that planet can indicate minimal population stratification when applied to a homogenous Caucasian population. Thus, planet will be useful in assessing population stratification in future placental EWAS, as well as conducting ethnicity-stratified analyses, which may lead to important insights into the disparities between populations of pregnancy-related outcomes [@bryant2010; @xiao2014; @rosenberg2005].
+This is challenging given the wide host of technical variables that can affect DNAm measurements and the common finding that many phenotypes are associated with relatively small effect sizes [@price2018; @breton2017]. 
+To this end, adjustment for major confounders such as genetic ancestry or ethnicity can significantly improve EWAS. We demonstrated, in a reanalysis of our previously published PE placentas, that adjustment for ethnicity, determined by planet, improved the replicability of significant associations between independent cohorts. 
+Conversely, overadjustment can occur when populations are relatively homogeneous, resulting in bias and/or loss of precision. 
+We showed that planet can indicate minimal population stratification when applied to a homogenous Caucasian population.
+Thus, planet will be useful in assessing population stratification in future placental EWAS, as well as conducting ethnicity-stratified analyses, which may lead to important insights into the disparities between populations of pregnancy-related outcomes [@bryant2010; @xiao2014; @rosenberg2005].
 
 ## Conclusion
 
@@ -200,7 +206,7 @@ The machine-learning approach used to develop planet can easily be applied for o
 
 ### Collection of previously published placental 450k DNA methylation data
 
-Placental DNAm data from liveborn deliveries of healthy and mixed pregnancy complications (n = 585), were combined from seven GEO 450k datasets corresponding to five North American cohorts (summarized in Table \@ref(tab:ch2tab2)) [@wilson2018; @edgar2002; @martin2015; @paquette2016; @binder2015; @hanna2016]. Five unpublished samples from the C5 cohort were included and are available at GSE128827. Gestational ages of these pregnancies at delivery ranged from 26 to 42 weeks and 50.30% of samples were male. Samples were excluded (n=67) if their self-reported ethnicity was missing or did not fall into one of three major race/ethnicity groups: Asian/East Asian (n=53), Caucasian/White (non-hispanic) (n=389), or African/African American/Black (n=57). Based on census data [@uniteds], we note that self-reported Caucasian/White (non-hispanic) samples are typically of European ancestry, self-reported Asians are typically of East Asian ancestry and self-reported Africans represent diverse ancestries from Africa with a significant potential of admixture from other ancestries [@bryc2015].
+Placental DNAm data from liveborn deliveries of healthy and mixed pregnancy complications (n = 585), were combined from seven GEO 450k datasets corresponding to five North American cohorts (summarized in Table \@ref(tab:ch2tab2)) [@wilson2018; @edgar2002; @martin2015; @paquette2016; @binder2015; @hanna2016]. Five unpublished samples from the C5 cohort were included and are available at GSE128827. Gestational ages of these pregnancies at delivery ranged from 26 to 42 weeks and 50.30% of samples were male. Samples were excluded (n=67) if their self-reported ethnicity was missing or did not fall into one of three major race/ethnicity groups: Asian/East Asian (n=53), Caucasian/White (non-hispanic) (n=389), or African/African American/Black (n=57). Based on census data [@uniteds], we note that self-reported Caucasian/White (non-hispanic) samples are typically of European ancestry, self-reported Asians are typically of East Asian ancestry and self-reported African represent diverse ancestries from Africa with a significant potential of admixture from other ancestries [@bryc2015].
 When possible, data was downloaded as raw IDAT files (GSE75248, GSE100197, GSE100197, GSE108567, GSE74738), otherwise methylated and unmethylated intensities were utilized (GSE70453, GSE73375).
 
 ### DNA methylation data processing
