--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -14,10 +14,10 @@ However, methods to estimate population effects either by inferring genetic ance
 
 In this study, we developed a placenta-specific approach to predicting ethnicity, which we refer to as planet (Placental DNAm Elastic Net Ethnicity Tool).
 Planet uses DNAm and genotyping data measured on the 450k array and was developed using multiple cohorts of placentas from North America.
-To ensure compatibility with future studies, planet was developed on overlapping sites from 450k and the newer 850k/EPIC array.
+To ensure compatibility with future studies, planet was developed on overlapping sites from 450k and the newer 850k array.
 We show that planet out-performs existing methods in predicting ethnicity in placental DNAm data and can produce accurate measures of genetic ancestry.
 Our method can be used to classify individuals into discrete groups based on self-reported race/ethnicity (i.e., Black/African, Asian, and White/Caucasian) or to describe individuals on an ancestral continuum that more accurately reflect the nature of human populations.
-In studies where ethnicity information is unavailable, planet can be applied to predict ethnicity after obtaining DNAm data, and used to investigate population-specific differences or to minimize confounding by population stratification in downstream DNA methylation statistical analyses.
+In studies where ethnicity information is unavailable, planet can be applied to predict ethnicity after obtaining DNAm data, and used to investigate population-specific differences or to minimize confounding by population stratification in downstream DNAm statistical analyses.
 
 ## Results
 
@@ -80,7 +80,7 @@ knitr::include_graphics(here::here('images', 'ch2', 'Figure 1.pdf'))
 ### Ethnicity-predictive sites on the 450k array are largely linked to genetic variation
 
 To better understand the basis of planet's ethnicity prediction, we examined the 1860 sites automatically-selected by the GLMNET model.
-These sites were enriched for SNP probes, containing 15 of the 59 SNPs explicitly measured on both 450k and EPIC DNAm arrays (p \< 1e-16).
+These sites were enriched for SNP probes, containing 15 of the 59 SNPs explicitly measured on both 450k and 850k DNAm arrays (p \< 1e-16).
 Of the remaining 1845 DNAm sites, we found significant enrichment for sites linked to genetic variation: 802 sites (43.1%) have a documented SNP in either the probe body, CpG site of interrogation, or the single base extension site (p \< 1e-16) [@daca-roszak2015], and 220 sites (11.8%) corresponded to previously identified placental-specific methylation quantitative trait loci (mQTLs) [@delahaye2018] (p \< 1e-16, Figure \@ref(fig:ch2fig1)b). With respect to chromosomal location, we found significant enrichment for ethnicity-predictive sites on chromosomes 2 (p \< 0.01), 15 (p \< 0.05), and 17 (p \< 0.05) (Figure \@ref(fig:figa5) file 2: Figure \@ref(fig:figa5)). With respect to CpG density, we found significant enrichment for ethnicity-predictive sites in OpenSea (p \< 0.001) and South Shore (p \< 0.05) regions (Figure \@ref(fig:figa5)), where relatively neutral (unselected) genetic variation is more likely to be located [@walser2010].
 Pathway analysis for GO and KEGG terms for genes associated with the 1860 sites, found only one significant (p \< 0.05) GO term (homophilic cell adhesion via plasma membrane adhesion molecules).
 
@@ -161,7 +161,7 @@ kableExtra::kbl(
 ## Discussion
 
 In this study, we developed planet, a method to predict Asian, African, and Caucasian ethnicity using placental 450k array data.
-To enable compatibility with future studies, planet was developed on sites (452,453 CpGs and 59 SNPs) overlapping between 450k and EPIC Illumina DNAm arrays.
+To enable compatibility with future studies, planet was developed on sites (452,453 CpGs and 59 SNPs) overlapping between 450k and 850k DNAm arrays.
 Although all samples in this study were reported as a single ethnicity/race, we expected that there would be significant population substructure that might limit our ability to develop predictive models of ethnicity and to assess their performance.
 Despite this limitation, ethnicity could be predicted with high accuracy as assessed by cross validation.
 planet's DNAm-based ethnicity classification relies on 450k sites with large amounts of genetic signal, which supported our initial efforts to filter our data to enrich for genetic-informative sites prior to classifier development (methods) [41, 50, 51]. When examining planet's 1,860 sites used to predict ethnicity, more than half could be linked to a nearby genetic polymorphism. Of these, 802 CpG sites have documented SNPs in their probe body, single base extension or CpG site of interrogation, which previously have been identified to differ between European and East Asian populations [@daca-roszak2015]. Several studies have suggested the genetic influence on DNAm at these sites is primarily technical in nature [@daca-roszak2015; @chen2013; @price2013], suggesting the patterns in DNAm at these sites are likely tissue-agnostic, warranting further investigation in their utility in predicting ethnicity and/or genetic ancestry in tissues other than the placenta. A significant proportion of other ethnicity-predictive CpG sites (n = 220) were previously found associated with placental mQTLs in a population with similar demographics to the ones studied here [@delahaye2018]. This finding, together with EPISTRUCTURE---a method that also relies on mQTLs [@rahmani2017]---suggests that leveraging the tissue- and population- specificity of mQTLs can produce highly effective DNAm -based population structure inference methods.
@@ -199,7 +199,7 @@ Thus, planet will be useful in assessing population stratification in future pla
 
 We demonstrated that ethnicity and genetic ancestry can be accurately predicted using placental HM40K DNAm microarray data with respect to three major ethnicity/ancestral populations.
 Although samples that were used to develop planet were reported to come from single ethnic populations, our classifier was able to capture mixed ancestry, and outperformed existing prediction methods.
-planet will be valuable in assessing and accounting for population stratification, which can confound associations between DNAm with disease or environment, in future studies using 450k or EPIC arrays.
+planet will be valuable in assessing and accounting for population stratification, which can confound associations between DNAm with disease or environment, in future studies using 450k or 850k arrays.
 The machine-learning approach used to develop planet can easily be applied for other tissues and populations for use in future DNAm studies.
 
 ## Methods
@@ -211,9 +211,9 @@ When possible, data was downloaded as raw IDAT files (GSE75248, GSE100197, GSE10
 
 ### DNA methylation data processing
 
-All samples were analyzed using the Illumina Infinium HumanMethylation450 BeadChip array (450k), the most popular measure of DNAm for EWAS.
+All samples were analyzed using the Illumina Infinium HumanMethylation450 BeadChip array.
 Array data analysis was performed using R version 3.5.0.
-To allow compatibility of planet with the newest Infinium MethylationEPIC BeadChip array (EPIC), the raw 450k data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development.
+To allow compatibility of planet with the newer 850k microarray, the raw 450k data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development.
 
 Biological sex was determined by hierarchical clustering on DNAm measured from sites on the sex chromosomes and then compared to reported sex.
 Samples with discordant reported and inferred sex were removed (n=3).
